force-app/main/default/objects/Account/fields/Aprobadas_por_cliente__c.field-meta.xml
<CustomField>
    <fullName>Aprobadas_por_cliente__c</fullName>
    <label>Aprobadas por cliente</label>
    <summaryFilterItems>
        <field>Aprobador__c.Aprobada__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Aprobador__c.Cliente__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>