force-app/main/default/objects/Account/fields/Cantidad_de_aprobadores__c.field-meta.xml
<CustomField>
    <fullName>Cantidad_de_aprobadores__c</fullName>
    <label>Cantidad de aprobadores</label>
    <summaryForeignKey>Aprobador__c.Cliente__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>