force-app/main/default/objects/Account/fields/MontoOportunidades__c.field-meta.xml
<CustomField>
    <fullName>MontoOportunidades__c</fullName>
    <label>Monto Oportunidades</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>